other-files/couchdb-statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
    name: couchdb
spec:
    serviceName: couchdb
    replicas: 1
    selector:
        matchLabels:
            tier: db
    template:
        metadata:
            labels:
                tier: db
        spec:
            terminationGracePeriodSeconds: 10
            containers:
                - name: couchdb
                  image: couchdb:3.2.2
                  ports:
                      - containerPort: 5984
                        name: http
                  volumeMounts:
                      - name: couchdb-data
                        mountPath: /opt/couchdb/data
    volumeClaimTemplates:
        - metadata:
            name: couchdb-data
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 10M
              storageClassName: ""
