other-files/overmind-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overmind
spec:
  replicas: 3
  selector:
    matchLabels:
      app: overmind
  template:
    metadata:
      labels:
        app: overmind
        tier: web
    spec:
      containers:
        - env:
            - name: OVERMIND_HTTP_ADDR
              value: 0.0.0.0:8080
            - name: COUCHDB_USERNAME
              value: admin
            - name: COUCHDB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: couchdb-password
                  key: password
          name: overmind
          image: kevinjqiu/overmind:1
