other-files/whale-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whalesay
spec:
  selector:
    matchLabels:
      app: whalesay
  template:
    metadata:
      labels:
        app: whalesay
    spec:
      containers:
        - command: ["cowsay"]
          image: docker/whalesay
          name: whalesay
  replicas: 2
