other-files/overmind-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overmind
  labels:
    app: overmind
    tier: web
spec:
  selector:
    app: overmind
    tier: web
  type: NodePort
  ports:
    - port: 8080
